[gd_scene load_steps=7 format=3 uid="uid://etrp4vbsn388"]

[ext_resource type="LabelSettings" uid="uid://bmt8337q2eie4" path="res://themes/default/paragraph_label_settings.tres" id="1_78fy2"]
[ext_resource type="Script" path="res://game/core/level_header.gd" id="1_j0mak"]

[sub_resource type="FontVariation" id="FontVariation_2drok"]

[sub_resource type="LabelSettings" id="LabelSettings_h6tt2"]
font = SubResource("FontVariation_2drok")
font_size = 36
font_color = Color(0.984314, 0.74902, 0.141176, 1)

[sub_resource type="Animation" id="Animation_b65uh"]
resource_name = "flashing"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.196078, 0.784314, 0.196078, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2dwuh"]
_data = {
"flashing": SubResource("Animation_b65uh")
}

[node name="LevelHeader" type="VBoxContainer"]
offset_right = 600.0
offset_bottom = 218.0
theme_override_constants/separation = 8
script = ExtResource("1_j0mak")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = -8

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Stage:"

[node name="StageTitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.658824, 0.333333, 0.968627, 1)
theme_override_font_sizes/font_size = 24
text = "Tutorial"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = -8

[node name="LevelNumberLabel" type="Label" parent="VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Level:"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="LevelTitleLabel" type="Label" parent="VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "\"Super long test title for a level to check overflow behavior\""
label_settings = SubResource("LabelSettings_h6tt2")
text_overrun_behavior = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2

[node name="PreviousLevelButton" type="Button" parent="VBoxContainer2/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
text = "   ◀ previous level   "

[node name="NextLevelButton" type="Button" parent="VBoxContainer2/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
text = "    next level ▶   "

[node name="NextLevelButtonAnimation" type="AnimationPlayer" parent="VBoxContainer2/VBoxContainer/HBoxContainer2/NextLevelButton"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_2dwuh")
}

[node name="Explanation" type="Label" parent="."]
layout_mode = 2
text = "Drag and drop components to get a high score!"
label_settings = ExtResource("1_78fy2")
autowrap_mode = 2

[connection signal="pressed" from="VBoxContainer2/VBoxContainer/HBoxContainer2/PreviousLevelButton" to="." method="_on_previous_level_button_pressed"]
[connection signal="pressed" from="VBoxContainer2/VBoxContainer/HBoxContainer2/NextLevelButton" to="." method="_on_next_level_button_pressed"]
